# esp32-retro-subsystem-drivers

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
components/audio/: CMakeLists.txt  audio.c
components/audio/include/: audio.h
components/framebuffer/: CMakeLists.txt  framebuffer.c
components/framebuffer/include/: framebuffer.h
components/ili9341/: CMakeLists.txt  ili9341.c
components/ili9341/include/: ili9341.h
components/wifi_server/: CMakeLists.txt  wifi_server.c
components/wifi_server/include/: wifi_server.h
main/: CMakeLists.txt  Kconfig.projbuild  image.h  main.c  sound.h
test/: CMakeLists.txt  test_audio.c  test_framebuffer.c  test_ili9341.c
test/mocks/: esp_idf_mock.c  esp_idf_mock.h
test/mocks/driver/: i2s_std.h
tools/: img2c.py  mp3toc.py  requirements.txt  send_audio.py  send_av.py  send_command.py  send_image.py  send_video.py  setup_env.sh
